<resources>
    <string name="app_name">Gasto em Viagem</string>
    <string name="distancia">Distancia</string>
    <string name="total_de_quilometros">Total de Quilometros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por Litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">Kilometros por Litro</string>
    <string name="gasto_total">Seu gasto total será:</string>
    <string name="valor_total_rs">R$ 0</string>
    <string name="calcular">Calcular</string>
    <string name="preenchaOsCampos">Preencha os campos corretamente</string>
    <string name="informeValorValido">Informe um valor válido</string>
</resources>