<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10dp">


    <EditText
        android:id="@+id/editTextDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distancia"
        android:layout_marginTop="10dp"
        android:inputType="number"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/total_de_quilometros"
        />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/preco"
        android:inputType="numberDecimal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/preco_por_litro"
        />

    <EditText
        android:id="@+id/editTextAutonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:hint="@string/autonomia"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/kms_por_litro"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:text="@string/gasto_total"
        />
    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/darkblue"
        android:text="@string/valor_total_rs"
        />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/ligthgreen"
        android:padding="20dp"
        android:text="@string/calcular"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:rippleColor="#4CAF50" />
</LinearLayout>
